[package]
name = "rockserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.4.8", features = ["headers"] }
bytes = "1.1.0"
dashmap = { version = "5.1.0", features = ["serde"] }
hyper = { version = "0.14.17", features = ["full"] }
lazy_static = "1.4.0"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
